--- a/app/templates/languages.html
+++ b/app/templates/languages.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
         <title>Language Select Test Page</title>
     </head>
     <body>
@@ -9,6 +11,7 @@
             <option>Professor</option>
             <option>etc</option>
         </select>
+
         <label>Select your native language: </label>
         <select name="language">
             {% for lang in languages %}
