added long questions on the back

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -89,13 +89,85 @@
         <div>
             <label>How sensitive is your work? </label>
             <select name="sensitive">
+                <option value=""></option>
                 <option value="Not very sensitive">Not very sensitive</option>
                 <option value="Somewhat sensitive">Somewhat sensitive</option>
                 <option value="More sensitive than most">More sensitive than most</option>
                 <option value="Extremely sensitive">Extremely sensitive</section></option>
             </select>
         </div>
+        <div>
+            <label>Since the start of the last academic year, how often have you self-censored your professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation? <label>
+            <select>
+                <option value=""></option>
+                <option value="Never">Never</option>
+                <option value="Sometimes">Sometimes</option>
+                <option value="Frequently">Frequently</option>
+                <option value="All the time">All the time</option>
+            </select>
+        </div>
+        <div>
+            <label>Since the start of the last academic year, how many professional colleagues or students are you aware of who have self-censored their professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation?
+            <label>
+            <select>
+                <option value=""></option>
+                <option value="None">None</option>
+                <option value="A few">A few</option>
+                <option value="A majority">A Majority</option>
+                <option value="Almost all">Almost all</option>
+            </select>
+        </div>
+        <div>
+            <label>Since the start of the last academic year, how often have you advised any professional colleagues or students to self-censor their professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation?</label>
+            <select>
+                <option value=""></option>
+                <option value="Never">Never</option>
+                <option value="Sometimes">Sometimes</option>
+                <option value="Frequently">Frequently</option>
+                <option value="All the time">All the time</option>
+            </select>
+        </div>
+        <div>
+            <label>What is the primary source of consequences that you or any professional colleagues or students might fear that would cause you to self-censor your professional expression (research, teaching/studies, publication, public expression)? </label>
+            <select> 
+                <option value=""></option>
+                <option value="Colleagues/Professional peers">Colleagues/Professional peers</option>
+                <option value="University/Employer">University/Employer</option>
+                <option value="Home Country Government">Home Country Government</option>
+                <option value="Foreign Country Government">Foreign Country Government
+                </option>
+                <option value="Society/Public">Society/Public</option>
+                <option value="Not sure">Not sure</option>
+                <option value="No fear of consequences">No fear of consequences</option>
+            </select>
+        </div>
+        <div>
+            <label>Since the start of the last academic year, have you experienced any professional, legal, or violent retaliation for your professional expression (research, teaching/studies, publication, public expression)? </label>
+            <select>
+                <option value=""></option>
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+                <option value="Not sure">Not sure</option>
+            </select>
+        </div>
+        <div>
+            <label>Since the start of the last academic year, are you aware of any professional colleagues or students who have experiences any professional, legal, or violent retaliation for their professional expression (research, teaching/studies, publication, public expression)? </label>
+            <select>
+                <option value=""></option>
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+                <option value="Not sure">Not sure</option>
+            </select>
+        </div>
+        <div>
+            <label>Compared to before the start of the last academic year, are you more or less likely today to self-censor your professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation? </label>
+            <select>
+                <option value=""></option>
+                <option value="More likely">More likely</option>
+                <option value="Less likely">Less likely</option>
+                <option value="About the same">About the same</option>
+            </select>
+        </div>
     </form>
 </body>
-
 </html>
