--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -77,7 +77,7 @@
                 <option value=""></option>
                 <option value="Natural Sciences">Natural Sciences</option>
                 <option value="Social Sciences">Social Sciences</option>
-                <option value="Arts and Humanities">Arts and Sumanities</option>
+                <option value="Arts and Humanities">Arts and Humanities</option>
                 <option value="Engineering">Engineering</option>
                 <option value="Computer Science">Computer Science</option>
                 <option value="Medicine">Medicine</option>
