--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Scholars At Risk</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
 </head>
+
+<img class = "logo" src="https://cdn.discordapp.com/attachments/617864535688216709/627368641524137986/logo.png">
+<div class = "screen1">
+        <ul>
+            <li>Simple text explanation of problem of self-censorship.</li>
+            <li>Purpose of data collection effort.</li>
+            <li>Security in place.</li>
+        </ul>
+</div>
 
 <body>
     <div>
