added bootstrap file :)

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Scholars At Risk</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
 </head>
 
-<img class = "logo" src="https://cdn.discordapp.com/attachments/617864535688216709/627368641524137986/logo.png">
+<img class = "logo" src="https://cdn.discordapp.com/attachments/617864535688216709/627368641524137986/logo.png"><br>
+<img style = "padding-top: 5px" class = "logo" src="https://cdn.discordapp.com/attachments/617864535688216709/627378350717009950/statement.png"><br>
+
 <div class = "screen1">
         <ul>
             <li>Simple text explanation of problem of self-censorship.</li>
@@ -21,6 +22,7 @@
     <div>
         <p>This is placeholder introductory information.</p>
     </div>
+    <div class="divForm">
     <form>
         <div>
             <label>Please identify your user type: <label>
@@ -104,7 +106,7 @@
                 <option value="Not very sensitive">Not very sensitive</option>
                 <option value="Somewhat sensitive">Somewhat sensitive</option>
                 <option value="More sensitive than most">More sensitive than most</option>
-                <option value="Extremely sensitive">Extremely sensitive</section></option>
+                <option value="Extremely sensitive">Extremely sensitive</option>
             </select>
         </div>
         <div>
@@ -180,5 +182,6 @@
             </select>
         </div>
     </form>
+    </div>
 </body>
 </html>
