--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: 'Montserrat', sans-serif;
+    font-family: arial;
     font-size: 12px;
 }
 .logo{
@@ -13,7 +13,7 @@
     width: 40%;
     margin:auto;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 ul{
     background-color: #e2656b;
@@ -31,11 +31,7 @@ select{
 }
 option{
     outline:none;
-    background: #e2656b;
     border:none;
-}
-option:hover{
-    background: #64bed1;
 }
 .divForm{
     width:50%;
