update bootstrap link

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <title>Scholars At Risk</title>
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
 </head>
 
-<img class = "logo" src="https://cdn.discordapp.com/attachments/617864535688216709/627368641524137986/logo.png"><br>
-<img style = "padding-top: 5px" class = "logo" src="https://cdn.discordapp.com/attachments/617864535688216709/627378350717009950/statement.png"><br>
+<div class = "logo">
+    <img class = "mx-auto d-block" src="https://cdn.discordapp.com/attachments/617864535688216709/627368641524137986/logo.png"><br>
+    <img class = "mx-auto d-block" src="https://cdn.discordapp.com/attachments/617864535688216709/627378350717009950/statement.png"><br>
+</div>
 
 <div class = "screen1">
         <ul>
