logo change again :^)

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -10,7 +10,7 @@
 
 <div class = "logo mx-auto">
     <img class = "mx-auto d-block" src="https://cdn.discordapp.com/attachments/617864535688216709/627393697985724416/logo.png"><br>
-    <img class = "mx-auto d-block" src="https://cdn.discordapp.com/attachments/617864535688216709/627378350717009950/statement.png"><br>
+    <img class = "mx-auto d-block" style="width: 90%" src="https://cdn.discordapp.com/attachments/617864535688216709/627396008074018817/statement.png"><br>
 </div>
 
 <div class = "screen1">
