--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,6 +5,7 @@
     background-image: url(/images/logo.png);
     max-width: 60%;
     margin-top: 3%;
+    margin-bottom: 20px;
 }
 .logo img{
     max-width: 100%;
@@ -16,7 +17,7 @@
     margin:auto;
     padding: 10px;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .user{
     letter-spacing: 2px;
@@ -48,6 +49,7 @@ option{
 .self-censorship{
     text-align: center;
     font-style: italic;
+    color:grey;
 }
 
 .logo{
