add text for intro to main

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -15,9 +15,9 @@
 
 <div class = "screen1">
         <ul>
-            <li>Simple text explanation of problem of self-censorship.</li>
-            <li>Purpose of data collection effort.</li>
-            <li>Security in place.</li>
+            <li>When scholars suffer attacks for their teaching, research, publications or public talks, other scholars begin to self-censor their work in fear of being victims of similar attacks. This problem of self-censorship leads to reduced freedom to think, question, and share ideas for everyone.</li>
+            <li>By filling out this survey, we at Scholars at Risk hope to quantify self-censorship to prove that it is a issue prevalent across the globe.</li>
+            <li>For your security, none of your responses or personal information will be stored on your device. Instead they will be stored in our secure server.</li>
         </ul>
 </div>
 
