--- a/app/static/style.css
+++ b/app/static/style.css
@@ -50,4 +50,10 @@ option{
     text-align: center;
     font-style: italic;
     color:grey;
+    font-weight: bold;
+    font-size: 16px;
+    padding-top: 0px;
+    padding-bottom: 30px;
+    padding left: 20px;
+    padding-right: 20px;
 }
