more style changes omagah

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -29,7 +29,7 @@
             will be used anonymously in reports, studies and advocacy about self-censorship.<br>
         </div>
         <hr>
-        <div class="user">USER INFORMATION</div>
+        <div class="header">USER INFORMATION</div>
         <div>
             <label for="userid">Please identify your user type: <label>
             <select id="userid" name="userid">
@@ -126,6 +126,7 @@
         <hr>
 
         <div>
+            <div class="header">QUESTIONNAIRE</div>
             <label>Since the start of the last academic year, how often have you self-censored your professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation? <label>
             <select>
                 <option value=""></option>
