--- a/app/static/style.css
+++ b/app/static/style.css
@@ -19,10 +19,10 @@
     border-radius: 5px;
     margin-bottom: 20px;
 }
-.user{
+.header{
     letter-spacing: 2px;
     text-align:center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 ul{
     background-color: #e2656b;
@@ -52,7 +52,7 @@ option{
     color:grey;
     font-weight: bold;
     font-size: 16px;
-    padding-top: 0px;
+    padding-top: 30px;
     padding-bottom: 30px;
     padding left: 20px;
     padding-right: 20px;
