--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="divForm">
-    <form>
+    <form method ="POST">
         <div>
             <input type="checkbox" name="condition" value="checked">I understand and agree that the data I submit
             will be used anonymously in reports, studies and advocacy about self-censorship.<br>
@@ -74,8 +74,8 @@
             <label>Please identify your primary professional language: </label>
             <select name="language">
                 <option value=""></option>
-                {% for lang in languages %}
-                <option name="{{ languages[lang] }}" value="{{ languages[lang] }}">{{ languages[lang]['native'] }}</p>
+                {% for lang, x in languages.items() %}
+                <option name="{{ x['native'] }}" value="{{ lang }}">{{ languages[lang]['native'] }}</p>
                 {% endfor %}
             </select>
         </div>
@@ -92,7 +92,7 @@
         </div>
         <div>
             <label>Please identify your disciple area: </label>
-            <select name="employment">
+            <select name="disciple">
                 <option value=""></option>
                 <option value="Natural Sciences">Natural Sciences</option>
                 <option value="Social Sciences">Social Sciences</option>
@@ -127,7 +127,7 @@
 
         <div>
             <label>Since the start of the last academic year, how often have you self-censored your professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation? <label>
-            <select>
+            <select name = "selfcensor">
                 <option value=""></option>
                 <option value="Never">Never</option>
                 <option value="Sometimes">Sometimes</option>
@@ -138,7 +138,7 @@
         <div>
             <label>Since the start of the last academic year, how many professional colleagues or students are you aware of who have self-censored their professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation?
             <label>
-            <select>
+            <select name="aware_of_colleague_saffected">
                 <option value=""></option>
                 <option value="None">None</option>
                 <option value="A few">A few</option>
@@ -148,7 +148,7 @@
         </div>
         <div>
             <label>Since the start of the last academic year, how often have you advised any professional colleagues or students to self-censor their professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation?</label>
-            <select>
+            <select name="advised">
                 <option value=""></option>
                 <option value="Never">Never</option>
                 <option value="Sometimes">Sometimes</option>
@@ -172,7 +172,7 @@
         </div>
         <div>
             <label>Since the start of the last academic year, have you experienced any professional, legal, or violent retaliation for your professional expression (research, teaching/studies, publication, public expression)? </label>
-            <select>
+            <select name="experienced_retaliation">
                 <option value=""></option>
                 <option value="Yes">Yes</option>
                 <option value="No">No</option>
@@ -181,7 +181,7 @@
         </div>
         <div>
             <label>Since the start of the last academic year, are you aware of any professional colleagues or students who have experiences any professional, legal, or violent retaliation for their professional expression (research, teaching/studies, publication, public expression)? </label>
-            <select>
+            <select name="aware_of_colleagues_experienced_retaliation">
                 <option value=""></option>
                 <option value="Yes">Yes</option>
                 <option value="No">No</option>
@@ -190,7 +190,7 @@
         </div>
         <div>
             <label>Compared to before the start of the last academic year, are you more or less likely today to self-censor your professional expression (research, teaching/studies, publication, public expression) because of fear of professional, legal, or violent retaliation? </label>
-            <select>
+            <select name="likeliness_to_selfcensor">
                 <option value=""></option>
                 <option value="More likely">More likely</option>
                 <option value="Less likely">Less likely</option>
