--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,6 +6,7 @@
     <title>Scholars At Risk</title>
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 
 <div class = "logo mx-auto">
