--- a/app/templates/thank-you.html
+++ b/app/templates/thank-you.html
@@ -6,14 +6,21 @@
     <title>Scholars At Risk</title>
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='font-awesome/css/all.min.css')}}" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
-    <div class="text-center">
-        <h2>Thank you for filling out our form!</h2>
-        <p>The data you have entered will be sent to Scholars at Risk and will help them better quantify self-censorship.</p>
-        <p>If you are interested in learning more about our organization or contributing to our cause, please take a look at our website, <a href="https://www.scholarsatrisk.org">scholarsatrisk.org</a></a>
-        Or follow us on twitter! <a href = "https://twitter.com/ScholarsAtRisk?s=17"></a></p>
+    <div class="container">
+        <div class="mx-auto">
+            <h2>Thank you for filling out our form!</h2>
+            <p>The data you have entered will be sent to Scholars at Risk and will help them better quantify
+                self-censorship.<br>
+                If you are interested in learning more about our organization or contributing to our cause, please take a
+                look at our website, <a href="https://www.scholarsatrisk.org">scholarsatrisk.org.</a><br> 
+                <p>Also, please follow us online: <br><a href="https://www.facebook.com/scholarsatrisk/"><i class="fab fa-facebook-square fa-2x"></i></a>    <a href="https://twitter.com/ScholarsAtRisk/"><i class="fab fa-twitter fa-2x"></i></a>   <a href="https://www.linkedin.com/company/scholars-at-risk/"><i class="fab fa-linkedin fa-2x"></i></a></p>
+            <p>
+            </p>
+        </div>
     </div>
 </body>
 </html>
