--- a/app/templates/thank-you.html
+++ b/app/templates/thank-you.html
@@ -18,8 +18,7 @@
                 If you are interested in learning more about our organization or contributing to our cause, please take a
                 look at our website, <a href="https://www.scholarsatrisk.org">scholarsatrisk.org.</a><br> 
                 <p>Also, please follow us online: <br><a href="https://www.facebook.com/scholarsatrisk/"><i class="fab fa-facebook-square fa-2x"></i></a>    <a href="https://twitter.com/ScholarsAtRisk/"><i class="fab fa-twitter fa-2x"></i></a>   <a href="https://www.linkedin.com/company/scholars-at-risk/"><i class="fab fa-linkedin fa-2x"></i></a></p>
-            <p>
-            </p>
+            <a href="/"><button class="btn btn-primary"><label>Submit another form</label></button></a>
         </div>
     </div>
 </body>
