--- a/app/static/style.css
+++ b/app/static/style.css
@@ -50,11 +50,21 @@ option{
     padding-left: 20px;
     padding-right: 20px;
 }
+.lang-selector label{
+    margin: 0!important;
+}
+input[type="submit"] {
+    margin-top: 10px;
+}
 
 .container {
     width: 100%;
     margin-top: 2%;
     border: 2px solid #e2656b;
+}
+.btn-primary {
+    font-size: 20px;
+    margin-bottom: 10px; 
 }
 
 @media screen and (max-width: 575.98px) { 
