styling changes to main

--- a/app/templates/thank-you.html
+++ b/app/templates/thank-you.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="mx-auto">
-            <h2>Thank you for filling out our form!</h2>
+            <h2>Thank you for filling out our form and sharing your views!</h2>
             <p>The data you have entered will be sent to Scholars at Risk and will help them better quantify
                 self-censorship.<br>
                 If you are interested in learning more about our organization or contributing to our cause, please take a
