--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -227,7 +227,7 @@
                 <option value="About the same">About the same</option>
             </select>
         </div>
-        <input class="btn btn-outline-danger" type="submit" value="Submit">
+        <input class="btn btn-outline-danger" type="submit" value="Submit Anonymously">
     </form>
     </div>
 </body>
