Use code in back button

--- a/app/templates/thank-you.html
+++ b/app/templates/thank-you.html
@@ -7,7 +7,7 @@
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='font-awesome/css/all.min.css')}}" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
@@ -16,9 +16,9 @@
             <p>The data you have entered will be sent to Scholars at Risk and will help them better quantify
                 self-censorship.<br>
                 If you are interested in learning more about our organization or contributing to our cause, please take a
-                look at our website, <a href="https://www.scholarsatrisk.org">scholarsatrisk.org.</a><br> 
+                look at our website, <a href="https://www.scholarsatrisk.org">scholarsatrisk.org.</a><br>
                 <p>Also, please follow us online: <br><a href="https://www.facebook.com/scholarsatrisk/"><i class="fab fa-facebook-square fa-2x"></i></a>    <a href="https://twitter.com/ScholarsAtRisk/"><i class="fab fa-twitter fa-2x"></i></a>   <a href="https://www.linkedin.com/company/scholars-at-risk/"><i class="fab fa-linkedin fa-2x"></i></a></p>
-            <a href="/"><button class="btn btn-primary"><label>Submit another form</label></button></a>
+                <a href="{{back_link}}"><button class="btn btn-primary"><label>Submit another form</label></button></a>
         </div>
     </div>
 </body>
